--- a/examples/with-vitest/package.json
+++ b/examples/with-vitest/package.json
@@ -5,9 +5,9 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "jsdom": "^21.1.1",
-    "msw": "2.2.2",
+    "jsdom": "24.0.0",
+    "msw": "2.3.0",
     "typescript": "^5.0.4",
-    "vitest": "^0.30.1"
+    "vitest": "1.6.0"
   }
 }
